white space on right corrected

--- a/home.css
+++ b/home.css
@@ -59,8 +59,10 @@ html{
     width: 100%;
     min-height: 100%;
     height: auto;
-    min-height: 100%;
     scroll-behavior: smooth;
+}
+
+html,body{
     overflow-x: hidden;
 }
 
@@ -579,6 +581,7 @@ ul.big-list{
 }
 .warning{
     height: 2rem;
+    margin-right: 1rem;
 }
 
 /* Light switch button */
